--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Отсчет до Нового Года 2025</title>
+    <title>Таймер до нового года 2025</title>
     <style>
         /* Анимация фона с плавным изменением цветов */
         @keyframes gradientAnimation {
