--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <h1>Отсчет до Нового Года 2025!</h1>
+    <h1>Таймер до нового года 2025 від Кості</h1>
     <div id="countdown">
         <!-- Здесь будет отображаться отсчет -->
     </div>
@@ -89,8 +89,8 @@
             // Когда наступает Новый год
             if (timeLeft < 0) {
                 clearInterval(countdownInterval); // Останавливаем отсчет
-                document.getElementById("countdown").innerHTML = "С Новым Годом 2025!";
-                document.getElementById("message").innerHTML = "Пусть 2025 год принесет вам счастье, успех и исполнение желаний!";
+                document.getElementById("countdown").innerHTML = "З новим роком 2025!";
+                document.getElementById("message").innerHTML = "Нехай 2025 принесе вам щастя, успіх і виконання бажань!";
             }
         }, 1000);
     </script>
